# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## 3.7.3 2024-05-21
### Fixed
- User account was not displayable for sport instructors
- Could not create new users


## 3.7.2 2024-04-24
### Fixed
- Queryset for managers and instructors was not correct, causing some users to  be wrongly displayed.
- Update of users lost manager rights.


## 3.7.1 2024-03-18
### Fixed
- Overlapping issue if a course is daily and registered user has already an event on same day, which is not daily.


## 3.7.0 2024-03-13
### Added
- New Restricted Admin role


## 3.6.2 2024-02-21
### Fixed
- Absences not editable


## 3.6.1 2024-02-20
### Fixed
- Supervisor contact previously set up was displayed for everyone.

### Changed
- TTL settings for La Tour de Peilz


## 3.6.0 - 2024-02-12
### Changed
- Absences export (single mode) to PDF now conserves the same order as the list of absences


## 3.5.12 - 2024-02-08
### Added
- New KEPCHUP_DISPLAY_PUBLICLY_SUPERVISOR_PHONE and KEPCHUP_DISPLAY_PUBLICLY_SUPERVISOR_EMAIL settings to display or
  not the supervisor's phone and email on the public activities pages. Request of Monthey.


## 3.5.11 - 2024-02-01
### Fixed
- Issue where times when not compared when checking for overlapping courses


## 3.5.10 - 2024-01-29
### Changed
- Ensure child import is in correct format


## 3.5.9 - 2024-01-25
### Changed
- Montreux planning spring 2024


## 3.5.8 - 2024-01-16
### Changed
- Montreux printemps templating


## 3.5.7 - 2024-01-15
### Fixed
- Removed useless button to move between transports, was already integrated in the button bar


## 3.5.6 - 2024-01-10
### Fixed
- Uglified children.min.js to last version


## 3.5.5 - 2024-01-08
### Fixed