@@ -7,6 +7,9 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 
 ## 3.7.3 2024-05-21
+### Added
+- Export more fields from django course admin
+
 ### Fixed
 - User account was not displayable for sport instructors
 - Could not create new users
